Fixed Trips Table not showing Leader column

--- a/public/stylesheets/club.css
+++ b/public/stylesheets/club.css
@@ -413,7 +413,7 @@ TABLE#club_trips{
   border: 1px solid #ccc;
   background: #eeeeff;
   width: 100%;
-  font-size: 110%;
+  font-size: 105%;
 }
 TABLE#club_trips TR {
   margin: 10px;
